k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cardeal
  labels:
    app.kubernetes.io/name: cardeal
    app.kubernetes.io/part-of: cardeal
