k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cardeal-api
  namespace: cardeal
  labels:
    app.kubernetes.io/name: cardeal-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cardeal-api
